# Backend-Haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  hie.yaml  the-game-hs.cabal  thegame-hs.cabal
app/: Main.hs  TheGame.hs
app/TheGame/: Cards.hs  Handlers.hs  Main.hs  Types.hs  Util.hs
src/: TheGame.hs
src/TheGame/: Cards.hs  Types.hs
test/: Main.hs
