cabal-version:      3.4
name:               the-game-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mangoiv
maintainer:         mail@mangoiv.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable the-game-hs
    import:           warnings
    main-is:          Main.hs
    other-modules:
      , TheGame
      , TheGame.Types
      , TheGame.Handlers
    default-extensions:
      , BlockArguments
      , LambdaCase
      , OverloadedLists
      , OverloadedStrings
      , OverloadedRecordDot
      , PartialTypeSignatures
      , NoStarIsType
      , DerivingStrategies
      , DeriveAnyClass
      , QuantifiedConstraints
      , UndecidableInstances
      , DuplicateRecordFields
    build-depends:
      , base
      , network
      , wai
      , wai-websockets
      , websockets
      , warp
      , http-types
      , uuid
      , aeson
      , text
      , mtl
      , stm

    hs-source-dirs:   app
    default-language: GHC2021
