cabal-version:   3.4
name:            the-game-hs
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          mangoiv
maintainer:      mail@mangoiv.com

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable the-game-hs
  import:             warnings
  main-is:            Main.hs
  other-modules:
    TheGame
    TheGame.Cards
    TheGame.Handlers
    TheGame.Types
    TheGame.Util

  default-extensions:
    NoStarIsType
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    QuantifiedConstraints
    UndecidableInstances

  build-depends:
    , aeson
    , async
    , base
    , containers
    , http-types
    , mtl
    , network
    , random
    , stm
    , text
    , uuid
    , wai
    , wai-websockets
    , warp
    , websockets

  hs-source-dirs:     app
  default-language:   GHC2021
